# html-word-count

./: .editorconfig  README.rst  pyproject.toml
src/html_word_count/: __main__.py
